--- a/tiptop/package.json
+++ b/tiptop/package.json
@@ -6,14 +6,17 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.6.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.11",
     "web-vitals": "^2.1.0"
   },
